--- a/src/main/pages/animals/animals.html
+++ b/src/main/pages/animals/animals.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script defer src="../animals/animals.js"></script>
+    <script defer src="animals.js"></script>
 </head>
 <body>
 
