working on markers

--- a/src/main/pages/map/map.html
+++ b/src/main/pages/map/map.html
@@ -13,8 +13,18 @@
 
 <body>
 
-<div id="map"></div>
-<div id="instructions"></div>
+
+
+
+<div id="map">
+
+</div>
+<div id="instructions">
+
+</div>
+<div>
+<button id="button">Heyyooo</button>
+</div>
 
 </body>
 </html>
