--- a/src/main/pages/map/map.html
+++ b/src/main/pages/map/map.html
@@ -8,22 +8,17 @@
     <script defer src="map.js"></script>
 
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet'/>
 </head>
 
 <body>
 
+<div id="map"></div>
 
+<div id="instructions"></div>
 
-
-<div id="map">
-
-</div>
-<div id="instructions">
-
-</div>
 <div>
-<button id="button">Heyyooo</button>
+    <button id="button">Heyyooo</button>
 </div>
 
 </body>
