Waypoint route mapping added

--- a/website/src/pages/map/map.html
+++ b/website/src/pages/map/map.html
@@ -15,11 +15,11 @@
 
 <div id="map"></div>
 
-<div id="instructions"></div>
-
+<div id="estimates"></div>
 <div>
-    <button id="button">Heyyooo</button>
+    <button id="button">Set waypoint</button>
 </div>
+
 
 
 </body>
