Started with background ferrydistance

--- a/website/src/pages/map/map.html
+++ b/website/src/pages/map/map.html
@@ -18,6 +18,7 @@
 <div id="estimates"></div>
 <div>
     <button id="button">Set waypoint</button>
+    <button id="clear-button">Clear waypoint</button>
 </div>
 
 
